# bitbased

./: Cargo.toml  out.txt  vs_tscp.at
src/: main.rs
src/game/: atktbl.rs  bitbrd.rs  defs.rs  eval.rs  magic_table.rs  magics.rs  mkmv.rs  mod.rs  movgen.rs  perft.rs  pos.rs  pvtable.rs  search.rs  uci.rs  zobrist.rs
