[package]
name = "bitbased"
version = "0.1.0"
authors = ["Egor Moroz <egormoroz2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitintr = "*"
lazy_static = "*"
# static_init = "*"
rand = { version = "*", features = ["small_rng"] }

[profile.release]
opt-level = 3
debug = false

[profile.dev]
# opt-level = 3
debug = true

[profile.test]
opt-level = 3
